--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.6.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
@@ -31,5 +32,10 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
   }
 }
