--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "NodeNext", // Quy định output module được sử dụng
     "moduleResolution": "NodeNext",
-    "target": "ES2023", // Target output cho code
+    "target": "es2022", // Target output cho code
     "outDir": "dist", // Đường dẫn output cho thư mục build
     "esModuleInterop": true,
     "strict": true /* Enable all strict type-checking options. */,
@@ -13,5 +13,5 @@
     }
   },
   "files": ["src/type.d.ts"], // Các file dùng để defined global type cho dự án
-  "include": ["src/**/*"] // Đường dẫn include cho các file cần build
+  "include": ["src/**/*", "send-email.ts"] // Đường dẫn include cho các file cần build
 }
